src/objects/Account_Interest__c.object
<CustomObject>
    <description>Object that tracks customer product interests on account level with purchase dates for further analysis.</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Interest</relationshipLabel>
        <relationshipName>Account_Interest</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Number_of_sets__c</fullName>
        <description>The number of sets reflecting the customer&apos;s needs.</description>
        <label>Number of sets</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Account Interest</relationshipLabel>
        <relationshipName>Account_Interest</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Purchase_date__c</fullName>
        <description>Purchase date for further analysis.</description>
        <label>Purchase date</label>
        <type>Date</type>
    </fields>
    <label>Account Interest</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Account Interest Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Interest</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>